--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                  vr-mode-ui='enabled: false;'
                  renderer='logarithmicDepthBuffer: true;'>
                  <a-assets>
-                    <a-assets-item id='drone' src='/resources/buster_drone/scene.gltf'></a-assets-item>
+                    <a-assets-item id='drone' src='resources/scene.gltf'></a-assets-item>
                 </a-assets>
                 <a-marker preset='hiro'
                         smooth='true'>
