--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
                  <a-assets>
                     <a-assets-item id='drone' src='resources/scene.gltf'></a-assets-item>
                 </a-assets>
-                <a-marker preset='hiro'
-                        smooth='true'>
-                    
-                    <a-entity gltf-model="##drone"></a-entity>                                
+                <a-marker preset='hiro'  smooth='true'>                   
+                    <a-entity gltf-model="#drone"></a-entity>                                
                 </a-marker>
             <a-entity camera></a-entity>
         </a-scene>
