--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <!-- include ar.js for A-Frame -->
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="js/aframe-extras.js"></script>
 
     <body syle='margin : 0px; overflow: hidden;'>
        
