--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <a-assets-item id='drone' src='resources/scene.gltf'></a-assets-item>
                 </a-assets>
                 <a-marker preset='hiro'  smooth='true'>                   
-                    <a-entity gltf-model="#drone" scale='0.01 0.01 0.01' animation-mixer></a-entity>                                
+                    <a-entity gltf-model="#drone" scale='0.01 0.01 0.01' shadow="receive: false" animation-mixer></a-entity>                                
                 </a-marker>
             <a-entity camera></a-entity>
         </a-scene>
