--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                  vr-mode-ui='enabled: false;'
                  renderer='logarithmicDepthBuffer: true;'>
                  <a-assets>
-                    <a-assets-item id='drone' src='resources/scene.gltf'></a-assets-item>
+                    <a-assets-item id='drone' src='resources/scene.glb'></a-assets-item>
                 </a-assets>
                 <a-marker preset='hiro'  smooth='true'>                   
                     <a-entity gltf-model="#drone" scale='0.01 0.01 0.01' shadow="cast:false; receive:false" animation-mixer></a-entity>                                
