--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
                  vr-mode-ui='enabled: false;'
                  renderer='logarithmicDepthBuffer: true;'>
                  <a-assets>
-                    <a-assets-item id='drone' src='resources/scene.glb'></a-assets-item>
+                    <a-assets-item id='drone' src='https://raw.githubusercontent.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf'></a-assets-item>
                 </a-assets>
                 <a-marker preset='hiro'  smooth='true'>                   
                     <a-entity gltf-model="#drone" scale='0.01 0.01 0.01' shadow="cast:false; receive:false" animation-mixer></a-entity>  
+                    
                     <a-entity animation='property: rotation; to: 0 360 0; dur: 9000; loop: true; easing: linear;'>
                         <a-box position='0 0.5 0' 
                                material='color:pink; opacity: 0.7'> 
