--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <!-- include ar.js for A-Frame -->
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script src="js/aframe-extras.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function(){
+            var scene = document.querySelector('a-scene');
+            scene.addEventListener('loaded',function(e){
+                alert('loaded')
+            })
+        })
+    </script>
 
     <body syle='margin : 0px; overflow: hidden;'>
        
