--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script src="js/aframe-extras.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function(){
-            var scene = document.querySelector('a-scene');
-            scene.addEventListener('loaded',function(e){
+            var drone = document.getElementById('drone');
+            scene.addEventListener('loaded',function(){
                 alert('loaded')
             })
         })
