assets load check t1

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script>
         document.addEventListener('DOMContentLoaded', function(){
             var drone = document.getElementById('drone');
-            scene.addEventListener('loaded',function(){
+            drone.addEventListener('loaded',function(){
                 alert('loaded')
             })
         })
