--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="js/aframe-extras.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function(){
-            var drone = document.querySelector('#drone');
+            var drone = document.querySelector('#drone_scene');
             console.log('drone: ' + drone.tagName);
             drone.addEventListener('model-loaded',function(){
                 console.log('loaded');
@@ -25,7 +25,7 @@
                     <a-assets-item id='drone' src='https://raw.githubusercontent.com/alexteo/ARjs-3dObject/master/resources/drone.gltf'></a-assets-item>
                 </a-assets>
                 <a-marker preset='hiro'  smooth='true'>                   
-                    <a-entity gltf-model="#drone" scale='0.01 0.01 0.01' shadow="cast:false; receive:false" animation-mixer></a-entity>                         
+                    <a-entity id='drone_scene' gltf-model="#drone" scale='0.01 0.01 0.01' shadow="cast:false; receive:false" animation-mixer></a-entity>                         
                 </a-marker>
             <a-entity camera></a-entity>
         </a-scene>
