--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 var divS = document.querySelector('#div-loader');
                 console.log("div " + divS)
                 divS.disabled = true;
-                divS.remove();
+                //divS.remove();
                 alert('loaded');
             })
         })
