--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
                 console.log('loaded');
                 var divS = document.querySelector('#div-loader');
                 console.log("div " + divS)
+                divS.disabled = true;
                 divS.style.visibility = "hidden";
                 //divS.remove();
-                alert('loaded');
+                //alert('loaded');
             })
         })
     </script>
